# trailblazer-public

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: gazebo_bridge.yaml  nav2_params.yaml  slam_params.yaml
launch/: mission.launch.py  navigation.launch.py
models/boulder/: boulder.sdf  model.config
models/custom_terrain/: model.config  model.sdf
models/custom_terrain/meshes/: terrain_mesh.dae:Zone.Identifier
models/oak_tree/meshes/: oak_tree.dae
models/pine_tree/: model.sdf
models/pine_tree/meshes/: pine_tree.dae
nodes/: altitude_lidar.py  flight_control.py  gui_node.py  pose_relay.py
trailblazer_utils/: map_printer.py
urdf_drone/: model.config  model.sdf  parrot.gazebo.xacro  parrot.urdf.xacro
worlds/: final.sdf  final_terrain.sdf  simple_trees.sdf
